# rgbdcam-object-detect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindOpenNI2.cmake
example/: CMakeLists.txt  example_client.cpp
example/client/: client.cpp  client.h
example/cpp/: example_client.cpp
example/cpp/include/: client.h
example/cpp/src/: client.cpp
example/python/: client.py
include/: detectionserver.h  rgbdcam.h  utility.hpp
protocol/: CMakeLists.txt  compile_message.sh  message.pb.cc  message.pb.h  message.proto  message_pb2.py
src/: detectionserver.cpp  main.cpp  rgbdcam.cpp
wrapper/include/: yolowrapper.h
wrapper/src/: yolo2_box.c  yolowrapper.cpp
